videoencoder: Reset internal state and segments on FLUSH_STOP

https://bugzilla.gnome.org/show_bug.cgi?id=656007